<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/dish_add_container">

        <EditText
            android:id="@+id/dish_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Dish name"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Category"
            app:layout_constraintTop_toBottomOf="@+id/dish_name"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Necessary time"
            app:layout_constraintTop_toBottomOf="@+id/category_name"
            tools:layout_editor_absoluteX="0dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            app:layout_constraintBottom_toTopOf="@+id/ready_add_dish_button"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="28dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/necessary_products"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/add_necessary_product_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

        <Button
            android:id="@+id/ready_add_dish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="Add"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="178dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>