<?xml version="1.0" encoding="utf-8"?>


<layout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.AddAction"
        android:orientation="vertical">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/cooking_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Cooking"
                />
            <RadioButton android:id="@+id/eating_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Eating"
                />

            <RadioButton android:id="@+id/other_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Other"
                />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Time of start"
            android:id="@+id/time_to_start_edit"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/duration_edit"
            android:hint="Duration"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            tools:layout_editor_absoluteX="28dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/action_dishes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/add_action_dishes_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>

        <Button
            android:id="@+id/ready_add_dish_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add"
            android:enabled="false"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>


</layout>
